java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug123850d-hints.pass
Add throws clause for java.io.FileNotFoundException
Surround Statement with try-catch
